[gd_scene load_steps=5 format=3 uid="uid://e8j63csldqer"]

[ext_resource type="Script" path="res://Scenes/MainMenu.gd" id="1_mxtse"]
[ext_resource type="FontFile" uid="uid://bydg4xalbmiwi" path="res://Art/Font/Pixellari.ttf" id="2_cgc53"]
[ext_resource type="AudioStream" uid="uid://xhfx6pbq77ed" path="res://UI/UI Music/Button_Press_1.wav" id="3_of5t7"]
[ext_resource type="AudioStream" uid="uid://dwa5e4a4rrk52" path="res://UI/UI Music/Play_Game_Buttonb.wav" id="4_eokog"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mxtse")

[node name="Node2D" type="Node2D" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1146.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_cgc53")
theme_override_font_sizes/font_size = 64
text = "Game Title"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cgc53")
theme_override_font_sizes/font_size = 34
text = "Play"

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cgc53")
theme_override_font_sizes/font_size = 34
text = "Options"

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cgc53")
theme_override_font_sizes/font_size = 34
text = "Exit"

[node name="Music" type="Node2D" parent="."]

[node name="ButtonPress" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("3_of5t7")

[node name="PlayButton" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("4_eokog")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
